Arrumando varias coisas